--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,11 @@ dependencies {
     //Add dependencies here
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
     implementation 'android.arch.lifecycle:extensions:1.0.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 }
