--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,20 +14,21 @@
         <activity
             android:name=".activities.HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".activities.AddNoteActivity"
             android:label="@string/title_activity_add"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
-            android:name=".activities.MainActivity"
-            android:label="@string/title_activity_add"
+            android:name=".activities.ContactListActivity"
+            android:label="@string/title_activity_contact"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
