add welcome screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.bluerocket.callernotse">
 
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
@@ -20,7 +23,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.HomeActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/HomeActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -61,6 +64,22 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.bluerocket.callernotse.activities.HomeActivity" />
+        </activity>
+        <activity
+            android:name=".activities.MainActivity"
+            android:label="@string/title_activity_main">
+
+        </activity>
+        <activity
+            android:name=".activities.InsertCallLog"
+            android:label="@string/add"
+            android:theme="@android:style/Theme.Dialog">
+
+        </activity>
+        <activity android:name=".activities.WelcomeActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:noHistory="true">
+
         </activity>
     </application>
 
