--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.google.android.gms:play-services-plus:11.6.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -34,9 +35,11 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.0.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.recruit-lifestyle:FloatingView:2.2.3'
     implementation 'com.android.support:preference-v14:26.1.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.3'
+    implementation 'com.gordonwong:material-sheet-fab:1.2.1'
 
 }
