--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+    <!-- To access Google+ APIs: -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,10 +33,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.AddNoteActivity"
-            android:label="@string/title_activity_add"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.ContactListActivity"
             android:label="@string/title_activity_contact"
@@ -67,18 +66,19 @@
         </activity>
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/title_activity_main">
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
 
         </activity>
         <activity
             android:name=".activities.InsertCallLog"
             android:label="@string/add"
-            android:theme="@android:style/Theme.Dialog">
-
-        </activity>
-        <activity android:name=".activities.WelcomeActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:noHistory="true">
+            android:theme="@style/AppTheme.NoActionBar">
+    </activity>
+        <activity
+            android:name=".activities.WelcomeActivity"
+            android:noHistory="true"
+            android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
     </application>
