--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,7 @@ dependencies {
     implementation 'com.android.support:preference-v14:26.1.0'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.3'
     implementation 'com.gordonwong:material-sheet-fab:1.2.1'
+   implementation 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
 }
