--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+    dataBinding.enabled = true
     defaultConfig {
         applicationId "com.bluerocket.callernotse"
         minSdkVersion 15
